--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $color-gray4: #F0f0f0;
 $shadow: 3px 3px 9px #00000016, -5px -5px 10px white;
 $shadow2: 3px 3px 9px rgb(117 0 0 / 10%);
 $shadow3: 3px 3px 9px rgb(117 0 0 / 20%);
+$shadow4: 0px 10px 20px #00000016, -5px -5px 10px white;
 
 // FONTS
 $font-size: 12px;
