--- a/src/assets/scss/_resets.scss
+++ b/src/assets/scss/_resets.scss
@@ -2,7 +2,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body{
-    background-color: $color-gray4;
+    background-color: $color-gray0;
+
+    @include tablet-portrait-up{
+        @include flex($align:center, $justify:center);
+        min-height: 100vh;
+
+        #app{
+            background-color: $color-gray4;
+            height: 844px;
+            width: 390px;
+            border-radius: 3rem;
+            position: relative;
+            overflow: auto;
+        }
+    }
 }
 
 *{
@@ -52,5 +66,5 @@ button{
 }
 
 .overflow-hidden{
-    overflow: hidden;
+    overflow: hidden !important;
 }
